# transcribe_summary_assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
config/: config.ini  config.ini.example
doc/skills/: audit_repository.md  glob_audit_repository.md  glob_update_indexes.md  glob_update_kilo_rules.md  sync_standards.md
doc/specs/: final_spec.md
doc/standards/: _index_standards.md  console_ui_standards.md  deploy_docker_standards.md  deploy_lin_standards.md  deploy_standards.md  deploy_win_standards.md  docker_deploy_standards.md  project_deploy_standards_lin.md  project_deploy_standards_win.md  project_standards.md  skill_standards.md  software_doc_standards.md
input/yt/: link.txt
run/ai/: ai_ollama_check.py  ai_ollama_pull_models.py
run/api/: api_check_connection.py  api_test_requests.py
run/db/: db_check_connection.py  db_check_schema.py  db_init.py
run/email/: email_test_send.py
sql/: schema.sql
src/: audio_extractor.py  config.py  cuda_loader.py  db_manager.py  diarizer.py  email_sender.py  file_scanner.py  localization.py  logger.py  preflight.py  progress.py  retry.py  session_manager.py  startup.py  summarizer.py  transcriber.py  youtube_downloader.py
test/: test_file_scanner.py  test_session_manager.py  test_summarizer.py  test_transcriber.py
