[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-summary-assistant"
version = "0.6.2"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper==1.1.1",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "pyannote.audio==4.0.4",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "tabulate==0.9.0",
    "markdown==3.7",
    "yt-dlp==2026.6.9",
    "pytest==8.3.4",
]

[project.scripts]
transcribe-summary = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["src*"]
